<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/white"
    android:layout_gravity="left">
<TextView
    android:id="@+id/back_btn"
    android:layout_width="40dp"
    android:layout_height="match_parent"
    android:background="@mipmap/left_3"
    android:padding="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_recharge"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:textSize="22sp"/>
</RelativeLayout>
    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/phone_charge"
            android:text="@string/bill"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textSize="20sp"
            android:paddingTop="8dp"
            android:drawableBottom="@mipmap/line"
            android:textColor="@color/choice"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/charge"
            android:text="@string/flow"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textSize="20sp"
            android:paddingTop="8dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/phone_input_edt"
        android:inputType="number"
        android:maxLength="11"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_phone_num"
        android:gravity="center_vertical"
        android:textColorHint="@color/light_gray"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"/>
<TextView
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:text=".."
    android:paddingLeft="20dp"
    android:background="@color/white"
    android:id="@+id/message"
    android:textSize="12sp"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/white">
     <TextView
         android:id="@+id/m_10"
         android:layout_weight="1"
         android:layout_height="60dp"
         android:layout_width="0dp"
         android:background="@drawable/button_selector_true"
         android:text="10元"
         android:padding="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center"
         android:textSize="20sp"
         android:layout_margin="10dp"/>
     <TextView
         android:id="@+id/m_20"
         android:layout_weight="1"
         android:layout_height="60dp"
         android:layout_width="0dp"
         android:background="@drawable/button_selector_false"
         android:text="20元"
         android:padding="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center"
         android:textSize="20sp"
         android:layout_margin="10dp"/>
     <TextView
         android:id="@+id/m_30"
         android:layout_weight="1"
         android:layout_height="60dp"
         android:layout_width="0dp"
         android:background="@drawable/button_selector_false"
         android:text="30元"
         android:padding="10dp"
         android:layout_gravity="center_vertical"
         android:gravity="center"
         android:textSize="20sp"
         android:layout_margin="10dp"/>
 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/m_50"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:background="@drawable/button_selector_false"
            android:text="50元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/m_100"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:background="@drawable/button_selector_false"
            android:text="100元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/m_200"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_width="0dp"
            android:background="@drawable/button_selector_false"
            android:text="200元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
    </LinearLayout>
 <!--   <GridLayout
        android:id="@+id/type_grid"
        android:background="@color/light_gray"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2">
            <TextView
                android:layout_row="0"
                android:layout_column="0"
                android:layout_width="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/button_selector_style"
                android:text="10元"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_margin="10dp"/>
        <TextView
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_selector_style"
            android:text="10元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_selector_style"
            android:text="10元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_selector_style"
            android:text="10元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_selector_style"
            android:text="10元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_row="1"
            android:layout_column="2"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:background="@drawable/button_selector_style"
            android:text="10元"
            android:padding="10dp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_margin="10dp"
            />
    </GridLayout>-->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/white">
        <Button
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Instant_recharge"
            android:textSize="20sp"
            android:gravity="center"
            android:background="@drawable/button_selector_true"
            android:textColor="@android:color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
</LinearLayout>